# fop-project

./: .gitignore  CMakeLists.txt  README.md  sdl-config-help.md
data/pre-made-maps/: maps-list.txt
sdl2/sdl2-include/: SDL_events.h  SDL_hints.h  SDL_render.h
src/: globals.h  init.c  init.h  main.c  map.c  map.h  menu.c  menu.h
